--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,4 @@ sonar.projectName=innosights Test Service
 #sonar.exclusions=internal/repository/*,internal/repository/model/**,internal/domain/contract/**,internal/repository/migration/**,internal/domain/error/**,internal/usecase/error/**,internal/service_repository/error/**,internal/service_repository/*
 #sonar.tests=internal
 #sonar.test.inclusions=internal/**/*_test.go
-sonar.go.coverage.reportPaths=results.sarif
+sonar.reportPaths=results.sarif
