--- a/.github/workflows/checkov.yml
+++ b/.github/workflows/checkov.yml
@@ -74,8 +74,8 @@ jobs:
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          SONAR_TOKEN: 'squ_21a5cd2d91f35cee6cbd58a6c7c525a4526aa542'
+          SONAR_HOST_URL: 'sonar.yomafleet.tech'
         #with:
         #  projectBaseDir: .
         #  extraArgs: |
