--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -26,4 +26,4 @@ jobs:
         run: snyk auth ${{ secrets.SNYK_TOKEN }}
 
       - name: Run Snyk to check for vulnerabilities
-        run: snyk iac test
+        run: snyk iac test --report
