--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -16,3 +16,5 @@ jobs:
         continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      - name: Run Snyk to check for vulnerabilities
+        run: snyk iac test --report
